--- a/styles/base/_page.css
+++ b/styles/base/_page.css
@@ -10,7 +10,7 @@ body {
 }
 
 .section {
-  @apply relative px-4 py-12 sm:p-8 md:py-16 lg:py-20;
+  @apply relative px-4 py-12 sm:p-8 md:py-16 lg:py-20 border-b;
 
   &--content {
     @apply mx-auto;
