--- a/styles/modules/_product.css
+++ b/styles/modules/_product.css
@@ -1,10 +1,16 @@
 .product {
+  @apply border-b;
+
   &--content {
-    @apply relative grid md:grid-cols-2 items-start;
+    @apply relative grid md:grid-cols-2 md:gap-px md:bg-pageText;
   }
 
   &--gallery {
-    @apply relative mb-12 md:mb-0;
+    @apply relative mb-12 md:mb-0 xs:p-8 md:p-24 bg-pageBG border-b md:border-none;
+
+    .carousel {
+      @apply max-w-xl mx-auto;
+    }
   }
 
   &--details {
@@ -16,15 +22,35 @@
   }
 
   &--header {
-    @apply mb-8;
+    @apply flex mb-8 pb-2 border-b;
+
+    .price {
+      @apply flex flex-col items-end mt-auto ml-auto;
+
+      &--current {
+        @apply text-xl leading-normal font-semibold;
+      }
+
+      &--discount {
+        @apply mb-2 p-1 rounded-sm bg-pageText text-pageBG text-xxs leading-tight tracking-widest font-semibold uppercase;
+      }
+    }
   }
 
   &--name {
-    @apply m-0;
+    @apply m-0 text-3xl leading-snug;
+  }
+
+  &--title {
+    @apply pr-8 sm:pr-12;
   }
 
   &--variant {
-    @apply flex items-center mb-2;
+    @apply flex items-center mb-2 text-sm leading-relaxed tracking-wider font-semibold uppercase;
+
+    .label {
+      @apply -my-1 scale-90;
+    }
   }
 
   &--options {
@@ -32,10 +58,10 @@
   }
 
   &--actions {
-    @apply sm:flex;
+    @apply sm:flex sticky bottom-0 mt-4 p-4 md:p-8 border-t bg-pageBG is-textured text-center;
 
     .counter {
-      @apply hidden sm:inline-flex;
+      @apply hidden sm:inline-flex mr-4;
     }
   }
 
@@ -45,7 +71,16 @@
 }
 
 .option {
-  @apply flex mt-4 py-4;
+  @apply flex mt-4 py-4 border-t;
+
+  &--title {
+    @apply mr-12 text-xs font-semibold uppercase tracking-wider;
+  }
+
+  &--values {
+    @apply flex flex-wrap justify-end ml-auto gap-2 gap-y-2 gap-x-2;
+    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
+  }
 
   &--swatch {
     @apply clean-btn p-0 bg-transparent;
