--- a/styles/modules/_hero.css
+++ b/styles/modules/_hero.css
@@ -1,30 +1,32 @@
 .hero {
-  @apply relative overflow-hidden max-h-screen border-b;
-  max-height: calc(var(--vh, 1vh) * 100);
+  @apply grid relative overflow-hidden min-h-screen border-b;
+  min-height: calc(var(--vh, 1vh) * 100);
 
   @media (max-height: 500px) {
     min-height: 500px;
   }
   
   &--bg {
-    @apply relative w-full z-0 max-h-screen h-full;
+    @apply relative w-full z-0 h-full;
+    grid-area: 1/-1;
 
     &.is-desktop {
       @apply hidden sm:block;
-      padding-top: calc((9 / 16) * 100%);
     }
 
     &.is-mobile {
       @apply sm:hidden;
-      padding-top: calc((4 / 3) * 100%);
     }
   }
 
   &--overlay {
-    @apply absolute inset-0 z-10 flex flex-col justify-center;
+    @apply z-10 flex flex-col justify-center;
+    grid-area: 1/-1;
   }
 
   &--content {
-    @apply w-full max-w-5xl mx-auto px-4 pt-24 pb-12 text-center text-white;
+    @apply w-full max-w-5xl mx-auto px-4 text-center text-white;
+    padding-top: calc(var(--headerHeight) + 2rem);
+    padding-bottom: var(--headerHeight);
   }
 }
