--- a/styles/base/_labels.css
+++ b/styles/base/_labels.css
@@ -1,19 +1,7 @@
 .label {
-  @apply inline-flex items-center mx-2 p-2 pr-3 rounded-full border border-transparent bg-pageText text-pageBG text-xs leading-none tracking-normal normal-case;
+  @apply inline-flex items-center mx-2 p-2 pr-3 rounded-full border border-transparent bg-pageText text-pageBG text-xs leading-none tracking-normal normal-case has-indicator;
 
-  &::before {
-    @apply inline-block mr-2 rounded-full bg-pageBG;
-    width: 10px;
-    height: 10px;
-    content: "";
-  }
-
-  &.is-secondary {
+  &.is-active:not(.is-secondary) {
     @apply bg-transparent border-pageText text-pageText;
-
-    &::before {
-      @apply bg-pageText;
-      animation: pulse 2s infinite;
-    }
   }
 }
