--- a/styles/modules/_product.css
+++ b/styles/modules/_product.css
@@ -49,7 +49,7 @@
     @apply flex items-center mb-2 text-sm leading-relaxed tracking-wider font-semibold uppercase;
 
     .label {
-      @apply -my-1 scale-90;
+      @apply flex-shrink-0 -my-1 scale-90;
     }
   }
 
